--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
     <title>Dark Mode Toggler</title>
 </head>
 <body class="popup">
-    <span class="golden">Toggle</span>
+    <span class="blue">Toggle</span>
     <span class="blue">Me</span>
     <p>
         TOGGLE ME BRO!
@@ -19,5 +19,6 @@
         <div class="row">Off</div>
         <div class="circle"></div>
     </div>
+    <script src="./popup.js"></script>
 </body>
 </html>
